@@ -72,6 +72,74 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|DirectoryStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|DirectoryIteratorException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -137,6 +205,20 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|ChunkedArrayList
 import|;
 end_import
 
@@ -1087,6 +1169,121 @@ operator|>
 literal|0
 condition|)
 do|;
+block|}
+comment|/**    * Return the complete list of files in a directory as strings.<p/>    *    * This is better than File#listDir because it does not ignore IOExceptions.    *    * @param dir              The directory to list.    * @param filter           If non-null, the filter to use when listing    *                         this directory.    * @return                 The list of files in the directory.    *    * @throws IOException     On I/O error    */
+DECL|method|listDirectory (File dir, FilenameFilter filter)
+specifier|public
+specifier|static
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|listDirectory
+parameter_list|(
+name|File
+name|dir
+parameter_list|,
+name|FilenameFilter
+name|filter
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+name|list
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+try|try
+init|(
+name|DirectoryStream
+argument_list|<
+name|Path
+argument_list|>
+name|stream
+init|=
+name|Files
+operator|.
+name|newDirectoryStream
+argument_list|(
+name|dir
+operator|.
+name|toPath
+argument_list|()
+argument_list|)
+init|)
+block|{
+for|for
+control|(
+name|Path
+name|entry
+range|:
+name|stream
+control|)
+block|{
+name|String
+name|fileName
+init|=
+name|entry
+operator|.
+name|getFileName
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|filter
+operator|==
+literal|null
+operator|)
+operator|||
+name|filter
+operator|.
+name|accept
+argument_list|(
+name|dir
+argument_list|,
+name|fileName
+argument_list|)
+condition|)
+block|{
+name|list
+operator|.
+name|add
+argument_list|(
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|DirectoryIteratorException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+operator|.
+name|getCause
+argument_list|()
+throw|;
+block|}
+return|return
+name|list
+return|;
 block|}
 block|}
 end_class
