@@ -76,6 +76,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FilenameFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -134,6 +144,62 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|FileUtils
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -143,6 +209,16 @@ operator|.
 name|test
 operator|.
 name|GenericTestUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
 import|;
 end_import
 
@@ -1759,6 +1835,231 @@ name|in
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|enum|NoEntry3Filter
+specifier|private
+specifier|static
+enum|enum
+name|NoEntry3Filter
+implements|implements
+name|FilenameFilter
+block|{
+DECL|enumConstant|INSTANCE
+name|INSTANCE
+block|;
+annotation|@
+name|Override
+DECL|method|accept (File dir, String name)
+specifier|public
+name|boolean
+name|accept
+parameter_list|(
+name|File
+name|dir
+parameter_list|,
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+operator|!
+name|name
+operator|.
+name|equals
+argument_list|(
+literal|"entry3"
+argument_list|)
+return|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testListDirectory ()
+specifier|public
+name|void
+name|testListDirectory
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|File
+name|dir
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"testListDirectory"
+argument_list|)
+decl_stmt|;
+name|Files
+operator|.
+name|createDirectory
+argument_list|(
+name|dir
+operator|.
+name|toPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|entries
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|entries
+operator|.
+name|add
+argument_list|(
+literal|"entry1"
+argument_list|)
+expr_stmt|;
+name|entries
+operator|.
+name|add
+argument_list|(
+literal|"entry2"
+argument_list|)
+expr_stmt|;
+name|entries
+operator|.
+name|add
+argument_list|(
+literal|"entry3"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|entry
+range|:
+name|entries
+control|)
+block|{
+name|Files
+operator|.
+name|createDirectory
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|dir
+argument_list|,
+name|entry
+argument_list|)
+operator|.
+name|toPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|list
+init|=
+name|IOUtils
+operator|.
+name|listDirectory
+argument_list|(
+name|dir
+argument_list|,
+name|NoEntry3Filter
+operator|.
+name|INSTANCE
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|entry
+range|:
+name|list
+control|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|entries
+operator|.
+name|remove
+argument_list|(
+name|entry
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|entries
+operator|.
+name|contains
+argument_list|(
+literal|"entry3"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|list
+operator|=
+name|IOUtils
+operator|.
+name|listDirectory
+argument_list|(
+name|dir
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|entry
+range|:
+name|list
+control|)
+block|{
+name|entries
+operator|.
+name|remove
+argument_list|(
+name|entry
+argument_list|)
+expr_stmt|;
+block|}
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|entries
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|FileUtils
+operator|.
+name|deleteDirectory
+argument_list|(
+name|dir
+argument_list|)
 expr_stmt|;
 block|}
 block|}
